<b>Version 2.0.2:</b><br/><br/>
    &#8226; Safer database reads and writes for better stability<br/>
    &#8226; More optimization for timelines for better speed<br/>
    &#8226; Fixed profile pictures not always showing on searches<br/>
    &#8226; Fixed some RTL errors<br/>
    &#8226; Some fixes for saved searches not displaying content<br/>
    &#8226; A few more tweeks for Tweetmarker<br/>
    &#8226; Fixed Pwiccer<br/>
    &#8226; Fixed emojis not appearing correctly<br/>
    &#8226; Fixed a small bug for uploading images<br/>
</br><br/>

<b>Version 2.0.1:</b><br/><br/>
    &#8226; Slight style changes on the bar widget<br/>
    &#8226; Some reported bugs from 2.0.0 fixed<br/>
</br><br/>

<b>Version 2.0.0:</b><br/><br/>
<b>NEW:</b><br/>
    &#8226; Talon Pull will automatically shut down to preserve battery when no data connection is active, then restart and check your timeline for missed tweets when data becomes available again.<br/>
    &#8226; Compose button can now float over the main timelines instead of being in the action bar<br/>
    &#8226; New Discover tab in the drawer for trends, suggested users, and nearby tweets<br/>
    &#8226; Pictures page on a users profile<br/>
    &#8226; Custom Light Flow support (In future Light Flow update)<br/>
    &#8226; Favorite users timeline is now an option for the extra pages<br/>
    &#8226; Animations for opening new pages and windows<br/>
    &#8226; Post tweets from different accounts in the compose window<br/>
    &#8226; Notifications button in the action bar for Talon Pull interations<br/>
    &#8226; Unread "bar" widget<br/>
    &#8226; Seperated the DashClock settings from the notification settings<br/>
    &#8226; Widget themed differently<br/>
    &#8226; Two new transparent widget themes<br/>
    &#8226; Added time ago to the widget items<br/>
    &#8226; Mute expressions and keywords on tweets<br/>
    &#8226; View up to 100 retweeters of a status (API limit)<br/>