@@ -1,3 +1,9 @@
+<b>Version 2.0.4:</b><br/><br/>
+    &#8226; Fixed some problems with the drawer<br/>
+    &#8226; Fixed some links not appearing properly<br/>
+    &#8226; More crash fixes<br/>
+</br><br/>
+
 <b>Version 2.0.2:</b><br/><br/>
     &#8226; Safer database reads and writes for better stability<br/>
     &#8226; More optimization for timelines for better speed<br/>
